# photomancy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: conf.py  index.md
docs/examples/: eig_scheduling.ipynb  orbit_fitting.ipynb  walkthrough.ipynb
docs/explanation/: architecture.md  glossary.md  mathematical-foundations.md  orbital-parameterizations.md
src/photomancy/: __init__.py  disk.py  eig.py  posterior.py  posterior_utils.py  priors.py
src/photomancy/atmosphere/: __init__.py  forward.py  priors.py  retrieval.py
src/photomancy/backends/: __init__.py  base.py  laplace.py  mclmc.py  nested.py  nuts.py  pathfinder.py  smc.py
src/photomancy/core/: __init__.py  model.py
src/photomancy/orbit/: __init__.py  _numpyro_bridge.py  data.py  diagnostics.py  eig.py  few_epoch.py  forward.py  grid_search.py  inference.py  init.py  laplace.py  likelihoods.py  model.py  nested.py  ofti.py  priors.py  quasi_random.py  thiele_innes.py
tests/: conftest.py  nmc_reference.py  test_atmosphere.py  test_backends.py  test_disk_fitting.py  test_eig.py  test_eig_core.py  test_few_epoch.py  test_fitting.py  test_grid_search.py  test_imaging_fitting.py  test_init_kepler.py  test_integration.py  test_laplace.py  test_mcmc_backends.py  test_multiplanet_fitting.py  test_nested.py  test_ofti.py  test_orbit_diagnostics.py  test_orbit_inference.py  test_pm_anomaly.py  test_posterior.py  test_posterior_utils.py  test_priors.py  test_priors_integration.py  test_rv_fitting.py  test_smoke.py  test_stellar_astrometry.py
tests/core/: test_logdensity.py  test_scene.py
