[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "photomancy"
description = "Divination from light: Bayesian inference and value-of-information for HWO direct imaging"
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "blackjax>=1.2",
    "equinox",
    "hwoutils",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "jaxtyping",
    "numpy",
    "numpyro>=0.15.0",
    "orbix",
    "skyscapes",
]

[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-autoapi",
    "sphinx_autodoc_typehints",
    "matplotlib",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov", "arviz"]
# Deferred extras (declared, not installed in the BlackJAX-only first cut):
ns = ["jaxns"]          # nested-sampling evidence backend
npe = ["flowjax"]       # amortized neural posterior estimation
imaging = ["coronalyze"]  # differentiable detection/extraction likelihood helpers

[project.urls]
Homepage = "https://github.com/CoreySpohn/photomancy"
Issues = "https://github.com/CoreySpohn/photomancy/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/photomancy/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/photomancy"]

[tool.hatch.build.targets.sdist]
exclude = ["/scripts", "/docs", "/tests", "/.github"]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"
